[package]
name = "node_game_server"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5"
crossbeam-channel = "0.5"
futures-util = "0.3"
geo = "0.28"
osmpbf = "0.3"
rand = "0.9"
s2 = "0.0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2"
tiny_http = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
tokio-tungstenite = "0.24"
url = "2"

[profile.release]
strip = false
